# VM-Setup-Scripts

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml
base-vm-setup/linux-server/: firstboot-runner.sh  firstboot-setup.sh
base-vm-setup/windows-server/: FirstBoot.ps1  SetupComplete.cmd  firstboot-sysprep.ps1
cli/: __init__.py  _common.py  clone_vm.py  gen_hostname.py  gen_network.py  gen_password.py  pack_iso.py  update_vm.py  upload_file.py
tests/: FirstBoot.Tests.ps1  test-linux-runner.sh
vm-automation/: .gitignore  deploy-vm.py  deploy_vm.py  gen-vmx.py
vm-deployment-automation/: .gitignore  clone_vm.py  pack_scripts_into_iso.py  update_vm.py
vm-deployment-automation/script-generators/linux-server/: hostname.py  network.py
vm-deployment-automation/script-generators/windows-server/: hostname.py  network.py
vm-deployment-automation/vmlib/: datastore.py  vmx.py
ws-base-setup/: firstboot-sysprep.ps1
