[project]
name = "vm-setup-scripts"
version = "0.1.0"
description = "VM deployment automation: thin CLIs over the vmkit / configgen / isokit libraries."
requires-python = ">=3.14"
dependencies = [
    "vmkit",
    "configgen",
    "isokit",
]

[project.scripts]
clone-vm = "cli.clone_vm:main"
update-vm = "cli.update_vm:main"
pack-iso = "cli.pack_iso:main"
gen-hostname = "cli.gen_hostname:main"
gen-network = "cli.gen_network:main"
gen-password = "cli.gen_password:main"

[tool.uv.sources]
vmkit = { git = "https://github.com/Arnesh-EC/vmkit.git", tag = "v0.1.0" }
configgen = { git = "https://github.com/Arnesh-EC/configgen.git", tag = "v0.1.0" }
isokit = { git = "https://github.com/Arnesh-EC/isokit.git", tag = "v0.2.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
